fixed footer responsive on tablet/smartphone

--- a/digitalocean_style.css
+++ b/digitalocean_style.css
@@ -346,6 +346,9 @@ footer > .container > .row > .col-md-2 > ul > li{
   .smartphone-tablet_responsive{
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
   }
+  .blue-bg > .container > .row > .col-md-6 > p{
+    margin-bottom: 30px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px){
@@ -354,5 +357,8 @@ footer > .container > .row > .col-md-2 > ul > li{
   }
   .smartphone-tablet_responsive{
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  }
+  .blue-bg > .container > .row > .col-md-6 > p{
+    margin-bottom: 30px;
   }
 }
